# slm

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demos/: demo_linear_regression.py  demo_mlp.py
docs/: manual_ko.md
src/attention/: __init__.py
src/nn/: __init__.py  linear.py
src/tensor/: tensor.py
src/tokenizer/: __init__.py
src/training/: __init__.py
src/transformer/: __init__.py
tests/: test_gradcheck.py  test_nn_linear.py  test_tensor_autograd.py
